# Workout_Desktop

./: README.md
Application/: .gitignore  Application.pro  Application_en_GB.ts  CMakeLists.txt  dbhelper.cpp  dbhelper.h  dbhelper.hpp  exercise.cpp  exercise.h  exercise.hpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.hpp  mainwindow.ui
